--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -11,11 +11,15 @@ jobs:
 
     - name: Auto Minify
       uses: nizarmah/auto-minify@master
+      with:
+        directory: 'js'
+        output: 'js'
 
     # Auto commits minified files to the repository
     # Ignore it if you don't want to commit the files to the repository 
     - name: Auto committing minified files
-      uses: stefanzweifel/git-auto-commit-action@v3.0.0
+      uses: stefanzweifel/git-auto-commit-action
       with:
+        repository: 'js'
         commit_message: "Github Action: Auto Minified JS and CSS files"
         branch: ${{ github.ref }}
