--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -1,3 +1,4 @@
+
 name: Greetings
 
 on: [push]
@@ -11,15 +12,11 @@ jobs:
 
     - name: Auto Minify
       uses: nizarmah/auto-minify@master
-      with:
-        directory: 'js'
-        output: 'js'
 
     # Auto commits minified files to the repository
     # Ignore it if you don't want to commit the files to the repository 
     - name: Auto committing minified files
-      uses: stefanzweifel/git-auto-commit-action
+      uses: stefanzweifel/git-auto-commit-action@v3.0.0
       with:
-        repository: 'js'
         commit_message: "Github Action: Auto Minified JS and CSS files"
         branch: ${{ github.ref }}
